--- a/solve-me-first/index.html
+++ b/solve-me-first/index.html
@@ -5,7 +5,7 @@
     <title>Solve Me First</title>
     <script src="index.js"></script>
   </head>
-
+    <input type="text" name="InputNumber1">
   <body>
   Content of the document......
   </body>
