--- a/solve-me-first/index.html
+++ b/solve-me-first/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <title>Solve Me First</title>
     <script src="index.js"></script>
+    <link src="bootstrap.css"></link>
   </head>
-    <input type="text" name="InputNumber1">
   <body>
-  Content of the document......
+    Solve Me First
+    <div>
+      <input type="text" id="InputNumber1">
+      +
+      <input type="text" id="InputNumber2">
+      =
+      <span id="sumNumbers"></span>
+    </div>
+    <button type="button" class="btn btn-default" onclick="SumButtons()">Default</button>
   </body>
 
 </html>
