Changed button name to 'sum'

--- a/solve-me-first/index.html
+++ b/solve-me-first/index.html
@@ -15,7 +15,7 @@
       =
       <span id="sumNumbers"></span>
     </div>
-    <button type="button" class="btn btn-default" onclick="SumButtons()">Default</button>
+    <button type="button" class="btn btn-default" onclick="SumButtons()">Sum</button>
   </body>
 
 </html>
