Made 'Solve Me First' text into header

--- a/solve-me-first/index.html
+++ b/solve-me-first/index.html
@@ -6,8 +6,9 @@
     <script src="index.js"></script>
     <link src="bootstrap.css"></link>
   </head>
+
   <body>
-    Solve Me First
+    <h1>Solve Me First</h1>
     <div>
       <input type="text" id="InputNumber1">
       +
